[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Game/Map/MiniMap/miniRoom.png" type="Texture" id=1]
[ext_resource path="res://scripts/Game/Puzzles/keypad.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="keypad" type="Node2D"]
script = ExtResource( 2 )

[node name="back" type="Sprite" parent="."]
self_modulate = Color( 0.172549, 0.172549, 0.172549, 0.929412 )
position = Vector2( 492.5, 295.5 )
scale = Vector2( 3.54688, 5.89062 )
texture = ExtResource( 1 )

[node name="screen" type="Sprite" parent="."]
self_modulate = Color( 0.129412, 0.619608, 0.666667, 0.396078 )
position = Vector2( 494, 157 )
scale = Vector2( 3.01562, 1 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 407.5
margin_top = 135.0
margin_right = 581.5
margin_bottom = 179.0
text = "SET CODE   
PRESS  V  WHEN READY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btns" type="Position2D" parent="."]
position = Vector2( 411.5, 224 )

[node name="b1" type="TouchScreenButton" parent="btns"]
position = Vector2( 13, 11 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b1"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b1/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b2" type="TouchScreenButton" parent="btns"]
position = Vector2( 82, 11 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b2"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b2/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b3" type="TouchScreenButton" parent="btns"]
position = Vector2( 151, 11 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b3"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b3/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b4" type="TouchScreenButton" parent="btns"]
position = Vector2( 13, 80 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b4"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b4/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "4"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b5" type="TouchScreenButton" parent="btns"]
position = Vector2( 82, 80 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b5"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b5/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "5"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b6" type="TouchScreenButton" parent="btns"]
position = Vector2( 151, 80 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b6"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b6/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "6"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b7" type="TouchScreenButton" parent="btns"]
position = Vector2( 13, 150 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b7"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b7/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "7"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b8" type="TouchScreenButton" parent="btns"]
position = Vector2( 82, 150 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b8"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b8/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "8"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b9" type="TouchScreenButton" parent="btns"]
position = Vector2( 151, 150 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b9"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b9/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "9"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bx" type="TouchScreenButton" parent="btns"]
position = Vector2( 13, 219 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/bx"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/bx/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "X"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b0" type="TouchScreenButton" parent="btns"]
position = Vector2( 82, 219 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/b0"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/b0/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="by" type="TouchScreenButton" parent="btns"]
position = Vector2( 151, 219 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="btns/by"]
self_modulate = Color( 0.470588, 0.454902, 0.454902, 0.733333 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="btns/by/Sprite"]
margin_left = -21.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
text = "V"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="btns/b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="btns/b2" to="." method="_on_b2_pressed"]
[connection signal="pressed" from="btns/b3" to="." method="_on_b3_pressed"]
[connection signal="pressed" from="btns/b4" to="." method="_on_b4_pressed"]
[connection signal="pressed" from="btns/b5" to="." method="_on_b5_pressed"]
[connection signal="pressed" from="btns/b6" to="." method="_on_b6_pressed"]
[connection signal="pressed" from="btns/b7" to="." method="_on_b7_pressed"]
[connection signal="pressed" from="btns/b8" to="." method="_on_b8_pressed"]
[connection signal="pressed" from="btns/b9" to="." method="_on_b9_pressed"]
[connection signal="pressed" from="btns/bx" to="." method="_on_bx_pressed"]
[connection signal="pressed" from="btns/b0" to="." method="_on_b0_pressed"]
[connection signal="pressed" from="btns/by" to="." method="_on_by_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
